tests/fixtures/errors/borrow_return_no_lock.full
error[E0200]: a `.borrow` return must borrow from a `.lock` parameter -- mark the source parameter (e.g. `t: this.lock`) so the returned view has a locked parent
 --> borrow_return_no_lock.z:4:11
   4 |     peek: function {:this} out String.borrow is { return this.item }
     |           ^^^^
1 error found
